# c_example

./: .gitignore  CMakeLists.txt  Makefile  README.md  ex1.c  macro.c  main.c  make.sh  pointer_array.c  pointer_swap.c  pointer_test.c  swap.c  test
array/: a01.c
docs/stdio_h/: gets.md  printf.md  puts.md
math/: fibonacci.c
operator/: o01.c
points/: p01.c
sort/: bubble.c  bubble_sort.cpp  pascal_triangle.cpp  selection.c
src/: test.c
string/: README.md  s01.c  s02.c
struct/: s01.c
test/: t01.c  t02.c  t03.c  t04.c  t05.c  t06.c  t07.c  t08.c  t09.c  t10.c
